--- a/firefox/chrome/modules/jedi-js/mailjedi.css
+++ b/firefox/chrome/modules/jedi-js/mailjedi.css
@@ -87,3 +87,77 @@
 .button-submit input {
     color: #fff;
 }
+
+* Table List
+*****************************************************/
+.table-list {
+	border-spacing: 0;
+	padding: 0;
+	table-layout: fixed;
+	width: 100%;
+}
+.table-list thead th {
+	empty-cells: show;
+	font-weight: bold;
+	height: 4.25ex;
+	overflow: hidden;
+	padding: 3px 6px 1px 3px;
+	vertical-align :middle;
+	white-space: nowrap;
+}
+.table-list tr td {
+	border-bottom: 1px solid #D4D4D4;
+	empty-cells: show;
+	height: 4.25ex;
+	overflow: hidden;
+	padding: 3px 6px 1px 3px;
+	vertical-align :middle;
+	white-space: nowrap;
+}
+
+/* Components */
+.channel-add-icon {
+    display:inline-block;
+    float:left;
+    font-size:0.92em;
+    margin: 9px 18px 0 0;
+    text-align:center;
+}
+
+/* .setup-list (extends .table-list) */
+.setup-list {
+	margin-bottom: 1em;
+}
+.setup-list thead th {
+    color: #606060;
+}
+.setup-list tr td {
+	height: 6ex;
+}
+.setup-list col.col-1 {
+	width: 30px;
+}
+.setup-list col.col-2 {
+    width: 350px;
+}
+.setup-list col.col-3 {
+    width: auto;
+}
+.setup-list col.col-4 {
+	width: 80px;
+	text-align: right;
+}
+.setup-list .channel-icon {
+	display: block;
+	margin: 0 0 2px 2px;
+}
+#setup-list-empty {
+    display: block;
+    text-align: center;
+}
+
+.add-channel-displayname {
+    text-align: center;
+    font-size: 95%;
+    width: 44px;
+}
