--- a/firefox/chrome/modules/jedi-js/stylesheets/core/forms.css
+++ b/firefox/chrome/modules/jedi-js/stylesheets/core/forms.css
@@ -1,7 +1,7 @@
 /* Textfield and Textarea */
-label.textfield,
-div.textfield,
-div.textarea {
+.mail-jedi label.textfield,
+.mail-jedi div.textfield,
+.mail-jedi div.textarea {
 	background: #FFF url(../images/textfield_bg.gif) repeat-x left top;
 	border: 1px #DDE2EB solid;
 	border-top: 1px solid #C2CCDD;
@@ -14,9 +14,9 @@ div.textarea {
 	position: relative;
 	outline: 0 none;
 }
-label.textfield input,
-div.textfield input, 
-div.textarea textarea {
+.mail-jedi label.textfield input,
+.mail-jedi div.textfield input, 
+.mail-jedi div.textarea textarea {
 	background-color: #FFF;
 	border: 0 none;
 	display: block;
@@ -26,7 +26,7 @@ div.textarea textarea {
 }
 
 /* Forms */
-.form-container {
+.mail-jedi .form-container {
 	background-color: #f5f5f5;
 	border: 1px solid #999;
 	display: block;
@@ -35,41 +35,41 @@ div.textarea textarea {
 	-webkit-border-radius: 4px;
 	padding: 10px;
 }
-.form-container fieldset legend {
+.mail-jedi .form-container fieldset legend {
 	color: #666;
 	font-size: 1.5em;
 	padding-bottom: 0.5em;
 }
-.form-container .form-row {
+.mail-jedi .form-container .form-row {
 	background: #fff;
 	border: 1px solid #999;
 	margin-bottom: 10px;
 	padding: 10px 10px 0 10px;
 	overflow: hidden;
 }
-.form-container .form-row .form-row-item {
+.mail-jedi .form-container .form-row .form-row-item {
 	display: block;
 	overflow: hidden;
 	margin-bottom: 10px;
 }
-.form-container .form-row-item-desc {	
+.mail-jedi .form-container .form-row-item-desc {	
 	color: #666;
 	display: block;
 	font-style: italic;
 	padding-left: 20%;
 	margin-bottom: 10px;
 }
-.form-container .form-label {
+.mail-jedi .form-container .form-label {
 	display: inline-block;
 	float: left;
 	font-weight: bold;	
 	margin-right: 1%;
 	width: 19%;
 }
-.form-container .form-input-holder {
+.mail-jedi .form-container .form-input-holder {
 	float: left;
 	width: 80%;	
 }
-.form-container .textfield {
+.mail-jedi .form-container .textfield {
 	display: block;	
 }
