--- a/firefox/chrome/modules/jedi-js/stylesheets/master.css
+++ b/firefox/chrome/modules/jedi-js/stylesheets/master.css
@@ -2,7 +2,7 @@
 @import "core/reset.css";
 @import "core/spacing.css";
 @import "core/grid.css";
-/*@import "core/typography.css";*/
+@import "core/typography.css";
 @import "core/global.css";
 @import "core/buttons.css";
 @import "core/forms.css";
