--- a/firefox/chrome/modules/jedi-js/templates/dashboard.html
+++ b/firefox/chrome/modules/jedi-js/templates/dashboard.html
@@ -1,4 +1,4 @@
-<div id="content">\
+<div id="content" class="mail-jedi pam">\
     <div class="row-resize-height row clearfix">\
         <div class="column-16">\
             <div id="message-stream-container" class="box rounded-corner-box">\
