--- a/firefox/chrome/modules/jedi-js/stylesheets/core/buttons.css
+++ b/firefox/chrome/modules/jedi-js/stylesheets/core/buttons.css
@@ -49,3 +49,13 @@
 .mail-jedi .button-submit input {
     color: #fff;
 }
+
+/* Search Button */
+a.search-button {
+	background: url(../images/icons/magnifier.png) no-repeat;
+	display: inline-block;
+	width: 16px;
+	height: 16px;
+	outline: 0 none;
+	text-indent: -9000em;
+}
